--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "images/IMG_2602.JPG"
+  name             : "Ling LI"
+  pronouns         : "she/her"  
+  bio              : "Computer science PhD student in KCL"
+  location         : "UK"
+  employer         : "King's College London"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "ling.2.li@kcl.ac.uk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
