--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Computer science PhD student in KCL"
   location         : "UK"
   employer         : "King's College London"
-  uri              : # URL
+  uri              : https://lingli97.github.io/
   email            : "ling.2.li@kcl.ac.uk" 
 
   # Academic websites
