--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IMG_2602.JPG"
+  avatar           : "images/profile.png"
   name             : "Ling LI"
   pronouns         : "she/her"  
   bio              : "Computer science PhD student in KCL"
