--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Ling Li / PhD student in KCL"
 title_separator          : "-"
 name                     : &name "Ling Li"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lingli97.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/profile.png"
+  avatar           : "profile.png"
   name             : "Ling LI"
   pronouns         : "she/her"  
   bio              : "Computer science PhD student in KCL"
